--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "mongoose": "^6.0.7"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12"
   }
